package com.dmm.bootcamp.yatter2024.ui.login

internal data class LoginBindingModel(
  val username: String,
  val password: String,
)
